@startuml

title __STILLOBJECT's Class Diagram__\n

  namespace Bomber {
    namespace StillObject {
      class Bomber.StillObject.Gate {
          ~ entityList : List<Entity>
          + Gate()
          + takeDamage()
          + update()
      }
    }
  }
  

  namespace Bomber {
    namespace StillObject {
      class Bomber.StillObject.Tile {
          - id : int
          + Tile()
          + Tile()
          + Tile()
          + getFloorTile()
          + getId()
          + renderState()
          + setFloorTile()
          + setId()
          + update()
      }
    }
  }
  

  Bomber.StillObject.Gate -up-|> Bomber.StillObject.Tile
  Bomber.StillObject.Gate o-- Bomber.Game : game
  Bomber.StillObject.Tile -up-|> Bomber.Entity.Entity
  Bomber.StillObject.Tile o-- Bomber.StillObject.Tile : floorTile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
